samples/_failures_safe/1761286183_de78ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_104d4603.c: In function ‘main’:
./samples/SAFE/__tmp_104d4603.c:139:13: error: expected declaration or statement at end of input
  139 |             }
      |             ^
./samples/SAFE/__tmp_104d4603.c:139:13: error: expected declaration or statement at end of input
